# scratch-qt

./: .bzrignore  .gitignore  CMakeLists.txt  LICENSE.md  README-SNAP.md  aptbrowser.apparmor  aptbrowser.wrapper  go.sh  manifest.json.in  run.wrapper  snapcraft.yaml
app/: CMakeLists.txt  aptbrowser.desktop.in  aptbrowser.qml  main.qml
app/components/: Apt.qml  CMakeLists.txt  Cli.qml  Details.qml  Job.qml  ListButton.qml  ListHeader.qml  ThreadController.qml  ThreadWorker.qml  qmldir
app/ui/: CMakeLists.txt
backend/: Aptbrowserbackend_automoc.cpp  CMakeLists.txt  moc_backend.cpp  moc_depends.cpp
backend/Scratchqt/: qmldir
backend/modules/Aptbrowser/: backend.cpp  backend.h  controller.cpp  controller.h  depends.cpp  depends.h  qmldir
backend/plugin/: backend.cpp  cli.cpp  cli.h  controller.cpp  depends.cpp  depends.h  job.cpp  job.h  jobcontroller.cpp  jobcontroller.h  jobs.cpp  jobs.h  thread_controller.cpp  thread_controller.h  threadworker.h
po/: CMakeLists.txt  aptbrowser.pot
